removed java 1.5 dependent code
git-svn-id: file:///home/svn-repositories/biojava/biojava-live/trunk@3569 7c6358e6-4a41-0410-a743-a5b2a554c398